docs(mkdocs): fix word wrap on codeblocks
Former-commit-id: 79fa35fed9dbf054ae6d708de18686dd28e15881
Former-commit-id: 9f246ec318991a18a6cf774c5482daa16c7ae81b
Former-commit-id: beb193a958862fd65e486c5f98be713bc2a60cb0 [formerly e12c57fb30776fccec9422632e18412b0c121220]
Former-commit-id: 28b0aab166a56ed60bc905f5145d85754ea006ae

--- a/docs/docs/stylesheets/extra.css
+++ b/docs/docs/stylesheets/extra.css
@@ -688,7 +688,6 @@
     {
         background-color: #dfdfdf;
         border: none;
-        white-space: nowrap;
     }
 
     table code
@@ -1509,7 +1508,6 @@
     {
         background-color: var( --md-code-bg-color );
         border: none;
-        white-space: nowrap;
     }
 
     table .md-typeset code
